--- a/app/css/sprite.css
+++ b/app/css/sprite.css
@@ -16,33 +16,63 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 // HTML
 <i class="icon icon-home"></i>
 */
-.icon-facebook {
+.icon-bold {
   background-image: url(../img/sprite.png);
   background-position: 0px 0px;
+  width: 34px;
+  height: 37px;
+}
+.icon-emoji {
+  background-image: url(../img/sprite.png);
+  background-position: -34px 0px;
+  width: 34px;
+  height: 37px;
+}
+.icon-facebook {
+  background-image: url(../img/sprite.png);
+  background-position: -68px -37px;
   width: 28px;
   height: 28px;
 }
+.icon-foursquare {
+  background-image: url(../img/sprite.png);
+  background-position: -68px 0px;
+  width: 34px;
+  height: 37px;
+}
+.icon-leaf {
+  background-image: url(../img/sprite.png);
+  background-position: 0px -37px;
+  width: 34px;
+  height: 37px;
+}
 .icon-linkedin {
   background-image: url(../img/sprite.png);
-  background-position: -28px 0px;
+  background-position: 0px -74px;
   width: 28px;
   height: 28px;
 }
 .icon-pinterest {
   background-image: url(../img/sprite.png);
-  background-position: 0px -28px;
+  background-position: -28px -74px;
   width: 28px;
   height: 28px;
 }
 .icon-twitter {
   background-image: url(../img/sprite.png);
-  background-position: -28px -28px;
+  background-position: -56px -74px;
   width: 28px;
   height: 28px;
 }
+.icon-yen {
+  background-image: url(../img/sprite.png);
+  background-position: -34px -37px;
+  width: 34px;
+  height: 37px;
+}
 .icon-youtube {
   background-image: url(../img/sprite.png);
-  background-position: -56px 0px;
+  background-position: -102px 0px;
   width: 28px;
   height: 28px;
 }
