--- a/src/css/style.css
+++ b/src/css/style.css
@@ -194,6 +194,7 @@
 
 /* ========== Card start ========== */
 .card {
+    margin-bottom: 30px;
     box-shadow: 0 1px 2px rgba(205, 214, 222, .75);
     transition: all .1s ease-in;
 }
@@ -625,20 +626,19 @@
 
 .newest-products-tabs .card {
     position: relative;
-    margin-bottom: 30px;
     overflow: hidden;
 }
 
-.newest-products-tabs .card-description {
-    padding: 25px 30px;
-}
-
-.newest-products-tabs .card-item-info .card-title {
-    font-size: 1.125rem;
-}
-
 .newest-products-tabs .card-author-info {
-    padding: 20px 30px;
+    padding: 20px 20px;
+}
+
+.newest-products-tabs .card-author img {
+    margin-right: 5px;
+}
+
+.newest-products-tabs .card-author span {
+    font-size: .75rem;
 }
 
 .items-btn-wrap {
@@ -667,25 +667,40 @@
     padding-bottom: 0;
 }
 
+.trending-product-carousel {
+    padding-bottom: 205px;
+}
+
 .trending-products .card {
     position: relative;
     overflow: hidden;
 }
 
-.trending-product-carousel {
-    padding-bottom: 205px;
+.trending-products .card-author-info {
+    padding: 20px 20px;
+}
+
+.trending-products .card-author img {
+    margin-right: 5px;
+}
+
+.trending-products .card-author span {
+    font-size: .75rem;
 }
 
 .slick-list {
-    padding-bottom: 15px;
-    padding-left: 1px;
+    margin: 0 -15px;
+}
+
+.slick-slide {
+    margin: 0 15px;
 }
 
 .slick-dots {
     position: absolute;
     bottom: 118px;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-50%); 
 }
 
 .slick-dots li {
@@ -701,17 +716,14 @@
     height: 15px;
     color: transparent;
     border-radius: 50%;
-    border-top: 1px solid #b1b1b1;
-    background-color: #e8e8e8;
+    box-shadow: inset 0 2px 2px rgba(0, 0, 0, .2);
 }
 
 .slick-dots li.slick-active button {
-    border-top: 1px solid #8bc34a;
+    box-shadow: none;
     background-color: #8bc34a;
 }
 /* ========== Trending products end ========== */
-
-
 
 /* ==========  Why choose foxtar start ========== */
 .why-choose-foxtar .title {
@@ -1007,12 +1019,6 @@
     margin-left: 12px;
 }
 /* ========== View Controls end ========== */
-
-/* ========== Card start ========== */
-.all-items-wrap .card {
-    margin-bottom: 30px;
-}
-/* ========== Card end ==========  */
 
 /* ========== Pagination start ========== */
 .pagination-wrap {
