--- a/src/css/style.css
+++ b/src/css/style.css
@@ -750,6 +750,7 @@ textarea.form-control {
     width: 15px;
     height: 15px;
     color: transparent;
+    background-color: #e8e8e8;
     border-radius: 50%;
     box-shadow: inset 0 2px 2px rgba(0, 0, 0, .2);
 }
