--- a/src/css/style.css
+++ b/src/css/style.css
@@ -379,6 +379,12 @@ textarea.form-control {
         transform: translateX(-100%);  
     }
 
+    .mobile-aside.right {
+        transform: translateX(100%);
+        left: auto;
+        right: 0;
+    }
+
     body.show-aside {
         overflow-y: hidden;
     }
@@ -395,7 +401,7 @@ textarea.form-control {
         padding-bottom: 30px;
     }
 
-    .show-aside .mobile-aside.left {
+    .show-aside .mobile-aside {
         transform: translateX(0);
     }
 }
@@ -609,7 +615,7 @@ textarea.form-control {
     color: #546e7a;
 }
 
-.user-controls .btn.small-btn {
+.header-btn-wrap {
     margin-left: 26px;
 }
 
@@ -653,17 +659,24 @@ textarea.form-control {
 
 @media (max-width: 576px) {
     .need-help {
+        width: 100%;
         margin-top: 30px;
         font-size: .875rem;
+    }
+
+    .user-dropdown-control {
+        width: 100%;
+        margin-left: 0;
+        margin-top: 30px;
+        order: 1;
     }
 
     .dropdown-menu {
         margin-top: 0;
     }
 
-    .user-dropdown-control,
-    .user-controls .btn.small-btn {
-        margin-top: 30px;
+    .user-dropdown-control .dropdown-menu {
+        margin-top: 0;
     }
 }
 /* ========== Header end ========== */
@@ -1127,7 +1140,7 @@ textarea.form-control {
     color: #70838d;
 }
 
-@media (max-width: 1200px) {
+/* @media (max-width: 1200px) {
     .all-items-wrap .aside-section .card-title {
         font-size: .875rem;
     }
@@ -1135,7 +1148,7 @@ textarea.form-control {
     .all-items-wrap .aside-section .card-price {
         font-size: .875rem;
     }
-}
+} */
 /* ========== Aside section end ========== */
 
 /* ========== View Controls start ========== */
